--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GH_PAT }}  # ✅ Use GH_PAT if you set up a PAT
+          github_token: ${{ secrets.GH_PAT1}}  # ✅ Use GH_PAT if you set up a PAT
           branch: output
           force: true
 
@@ -42,4 +42,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # ✅ Ensure GH_PAT has correct permissions
+          GITHUB_TOKEN: ${{ secrets.GH_PAT1}}  # ✅ Ensure GH_PAT has correct permissions
